feat: add simple demo app

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,13 +3,10 @@ default: &default
   encoding: unicode
   pool: 5
   host: db  # Use the service name of the PostgreSQL container in the same network
-  username: myapp
-  password: myapp
   port: 5432
-
 
 development:
   <<: *default
-  database: myapp
-  username: myapp
-  password: myapp
+  database: lesliapp
+  username: lesliapp
+  password: lesliapp
