--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,47 @@
-version: '3'
+# Lesli
+# 
+# Copyright (c) 2023, Lesli Technologies, S. A.
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see http://www.gnu.org/licenses/.
+# 
+# Lesli · Ruby on Rails SaaS Development Framework.
+# 
+# Made with ♥ by https://www.lesli.tech
+# Building a better future, one line of code at a time.
+# 
+# @contact  hello@lesli.tech
+# @website  https://www.lesli.tech
+# @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+# 
+# // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+# // · 
+
+version: "3"
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: lesliapp
+      POSTGRES_PASSWORD: lesliapp
+      POSTGRES_DB: lesliapp
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U lesliapp"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
   web:
     build:
       context: .
@@ -10,23 +52,3 @@ services:
       - .:/app
     depends_on:
       - db
-    networks:
-      - mynetwork 
-  db:
-    image: postgres:16
-    environment:
-      POSTGRES_USER: myapp
-      POSTGRES_PASSWORD: myapp
-      POSTGRES_DB: myapp
-    ports:
-      - "5432:5432"
-    networks:
-      - mynetwork
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U myapp"]
-      interval: 5s
-      timeout: 10s
-      retries: 5
-
-networks:
-  mynetwork:
