--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,22 +27,38 @@
 # // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 # // · 
 
-# docker-compose.yml
+# This is a demo configuration file, not recommended for production
 
-version: '3.8'
+worker_processes 1;
 
-services:
-  rails:
-    build: .
-    volumes:
-      - .:/app/LesliBuilder
-    ports:
-      - "3000:3000"
+events {
+    worker_connections 1024;
+}
 
-  nginx:
-    build:
-      context: ./nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - rails
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    upstream rails_app {
+        server rails:3000;
+    }
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://rails_app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+}
