add env variables for "prod" mode

--- a/rails/Dockerfile.dev
+++ b/rails/Dockerfile.dev
@@ -84,6 +84,12 @@ RUN bundle install --without development test
 # update the gems to always use the latest version of Lesli
 RUN bundle update
 
+# set up env
+ENV RAILS_ENV=production
+ENV RAILS_LOG_TO_STDOUT=true
+ENV RAILS_SERVE_STATIC_FILES=true
+ENV RAILS_ALLOWED_HOSTS="demo.lesli.dev,www.demo.lesli.dev"
+
 # Precompile assets 
 RUN bundle exec rake assets:precompile
 
