add dummy secret for build stage

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,5 +7,7 @@ services:
     build: 
       context: ./rails
       dockerfile: Dockerfile.dev
+    env_file:
+      - ./.env
     ports:
       - "3000:3000"
