--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,36 @@
+# Lesli
+# 
+# Copyright (c) 2025, Lesli Technologies, S. A.
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see http://www.gnu.org/licenses/.
+# 
+# Lesli · Ruby on Rails SaaS Development Framework.
+# 
+# Made with ♥ by LesliTech
+# Building a better future, one line of code at a time.
+# 
+# @contact  hello@lesli.tech
+# @website  https://www.lesli.tech
+# @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+# 
 # This file is used to provide runtime environment variables.
 # It should not be committed to Git.
+
+RAILS_ENV=production
 SECRET_KEY_BASE="super secret" 
-RAILS_ALLOWED_HOSTS="demo.lesli.dev,localhost:3000"
+
+RAILS_CONFIG_FORCE_SSL=false
+RAILS_CONFIG_HOSTS="demo.lesli.dev,localhost"
+
+PROVIDERS_GOOGLE_TAG_MANAGER=G-LJRTGWVRCC
